Adding more article summaries drafted by Leo/Llama

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -18,9 +18,10 @@
 
 <!--
 
-One early possibility that looks promising: Riff on WSJ story about why bitcoiners' embrace of Trump represents an anti-libertarian turn. Link:  https://www.wsj.com/finance/currencies/bitcoin-goes-all-in-on-maga-shedding-its-antigovernment-slant-2f1bb3d0?st=p5MmW7&reflink=desktopwebshare_permalink
 
 -->
+
+
 
  <hr>
 
@@ -33,15 +34,20 @@ One early possibility that looks promising: Riff on WSJ story about why bitcoine
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK -->
+<!-- First two items here are candidates to expand into lead item... -->
 
-- Bloomberg: Lummis says Genius Act will was next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK -->
+- Bitcoin's close ties to the Trump administration are causing discomfort among some factions of the crypto world, as the industry seeks to gain mainstream acceptance. The industry's flagship event, the Bitcoin Conference, has become a platform for Trump officials and allies to promote their favored policies, with some critics warning that the government's increasing involvement could create conflicts of interest and jeopardize the industry's legitimacy. ([Wall Street Journal](https://www.wsj.com/finance/currencies/bitcoin-goes-all-in-on-maga-shedding-its-antigovernment-slant-2f1bb3d0?st=p5MmW7&reflink=desktopwebshare_permalink))  <!-- Draft by Leo/Llama 3.1 8B -->
+
+- Marc Maron is ending his popular podcast "WTF with Marc Maron" after 16 years, citing burnout and a sense of satisfaction with the show's impact on culture. The podcast, known for its introspective and often emotional conversations with celebrities, has been a staple of the medium and a refuge from the world's anger and confusion. ([Salon](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/)) <!-- Draft by Leo/Llama 3.1 8B -->
+
+- Reddit has filed a lawsuit against AI company Anthropic, alleging that it continued to access and use the online forum's data without permission, despite claiming to have stopped. The complaint claims that Anthropic's actions were unauthorized and violated Reddit's user data policy, and that the company used the data for commercial purposes without paying for it. ([Wall Street Journal](https://www.wsj.com/tech/ai/reddit-lawsuit-anthropic-ai-3b9624dd?st=YhJVhU&reflink=desktopwebshare_permalink)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 - Meta makes investment in nuclear data centers by Contellation. <!-- Link TK -->
 
-- TK
+- Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK -->
 
-- TK
+- Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK -->
+
 
 ### Market Snapshot
 
