Adding photo, prelim market quotes, copyedits

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -1,8 +1,8 @@
 # tktk
 ## tktk
 
-![Circle co-founder and CEO Jeremy Allaire speaking at a fintech conference](https://w3w.news/img/allaire-wikimedia-1920.jpg)
-*Circle co-founder and CEO Jeremy Allaire speaking at MoneyConf 2018 in Dublin. Cropped photo by Eóin Noonan via Wikimedia Commons under Creative Commons 2.0 [license](https://creativecommons.org/licenses/by/2.0/).*
+![Person in Guy Fawkes mask reading a newspaper that's on fire](https://w3w.news/img/fawkes-neves-1920.jpg)
+*Photo by Victória Neves via Unsplash.*
 
 <hr>
 
@@ -16,12 +16,11 @@
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
-<!--
+Riff on WSJ story about crypto's pro-MAGA swing as an anti-libertarian development.
 
+Draft summary by Leo/Llama 3.1 8B:
 
--->
-
-
+Bitcoin's close ties to the Trump administration are causing discomfort among some factions of the crypto world, as the industry seeks to gain mainstream acceptance. The industry's flagship event, the Bitcoin Conference, has become a platform for Trump officials and allies to promote their favored policies, with some critics warning that the government's increasing involvement could create conflicts of interest and jeopardize the industry's legitimacy. ([Wall Street Journal](https://www.wsj.com/finance/currencies/bitcoin-goes-all-in-on-maga-shedding-its-antigovernment-slant-2f1bb3d0?st=p5MmW7&reflink=desktopwebshare_permalink))  
 
  <hr>
 
@@ -34,20 +33,21 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-<!-- First two items here are candidates to expand into lead item... -->
-
-- Bitcoin's close ties to the Trump administration are causing discomfort among some factions of the crypto world, as the industry seeks to gain mainstream acceptance. The industry's flagship event, the Bitcoin Conference, has become a platform for Trump officials and allies to promote their favored policies, with some critics warning that the government's increasing involvement could create conflicts of interest and jeopardize the industry's legitimacy. ([Wall Street Journal](https://www.wsj.com/finance/currencies/bitcoin-goes-all-in-on-maga-shedding-its-antigovernment-slant-2f1bb3d0?st=p5MmW7&reflink=desktopwebshare_permalink))  <!-- Draft by Leo/Llama 3.1 8B -->
-
-- Marc Maron is ending his popular podcast "WTF with Marc Maron" after 16 years, citing burnout and a sense of satisfaction with the show's impact on culture. The podcast, known for its introspective and often emotional conversations with celebrities, has been a staple of the medium and a refuge from the world's anger and confusion. ([Salon](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/)) <!-- Draft by Leo/Llama 3.1 8B -->
-
 - Reddit has filed a lawsuit against AI company Anthropic, alleging that it continued to access and use the online forum's data without permission, despite claiming to have stopped. The complaint claims that Anthropic's actions were unauthorized and violated Reddit's user data policy, and that the company used the data for commercial purposes without paying for it. ([Wall Street Journal](https://www.wsj.com/tech/ai/reddit-lawsuit-anthropic-ai-3b9624dd?st=YhJVhU&reflink=desktopwebshare_permalink)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 - Meta makes investment in nuclear data centers by Contellation. <!-- Link TK -->
 
-- Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK -->
+- The Ethereum Foundation plans to take a more deliberate approach to spending its substantial ETH reserves, aiming to support the ecosystem during downturns or pivotal moments, as part of a broader shift to double down on Ethereum's role as the leading platform for decentralized applications. https://www.theblock.co/post/357066/ethereum-foundation-expects-2025-26-to-be-pivotal-for-the-ecosystem-as-it-reforms-its-treasury-management ([]())
 
-- Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK -->
+- **Crypto scored some big wins on Wall Street:** Circle IPO Thursday. <!-- Following story covers wednesday night pricing: - https://decrypt.co/323795/stablecoin-giant-circle-raises-1-billion-ipo-nyse-debut --> | Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK --> | JPMorgan is expanding its crypto services, allowing wealth-management clients to use cryptocurrency assets as loan collateral for certain ETFs, including BlackRock's iShares Bitcoin Trust, and counting crypto holdings toward their net worth and liquid assets when determining borrowing limits. This move marks another step in the bank's growing involvement in the crypto industry, following its decision to allow customers to buy bitcoin earlier this year. https://www.theblock.co/post/356998/jpmorgan-to-offer-crypto-etf-financing-considers-letting-clients-use-crypto-as-loan-collateral-report ([]())
 
+- *K Wave Media, a Korean entertainment firm listed on the NASDAQ, has seen its stock soar 143% after announcing plans to allocate a significant portion of its $500 million raise towards building a Bitcoin treasury and investing in related initiatives.* The company aims to leverage Bitcoin as a store of value and a foundation for innovation, joining a growing number of companies imitating a Bitcoin-focused corporate strategy. ([Decrypt](https://decrypt.co/323671/k-pop-firms-stock-soars-115-after-bitcoin-purchase-plans)) | **K-Pop Media Firm K Wave Sees Stock Surge After Announcing Bitcoin Acquisition Strategy** K Wave Media, a Nasdaq-listed K-Pop media holding company, has seen its stock surge 132.39% after announcing plans to sell $500 million worth of shares to finance its Bitcoin purchases and other corporate operations. The move follows a growing trend of firms holding Bitcoin as a strategic reserve asset, with K Wave claiming to be among the first publicly traded media companies to integrate BTC directly into its core treasury operations. https://www.theblock.co/post/357032/nasdaq-listed-k-pop-media-firm-k-wave-stock-rallies-130-after-announcing-bitcoin-acquisition-strategy ([]())
+
+<!--
+
+- Despite the COVID-19 pandemic having a devastating impact on American students and schools in many areas, high school graduation rates have continued to rise steadily over the past five years. However, this trend is concerning as it suggests that many students are being allowed to graduate underprepared for college or the workforce, with research indicating that chronic absenteeism during the pandemic had a significantly weakened effect on graduation rates. ([Washington Post](https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/)) <!-- Draft by Leo/Llama 3.1 8B
+
+- Airline experts have discovered that some major carriers, including Delta, United, and American Airlines, are charging individual passengers more for seats on identical flights compared to groups of travelers. This pricing strategy, which may not be new, has sparked debate among travel experts and raises questions about transparency in airline pricing. ([Washington Post](https://www.washingtonpost.com/travel/2025/05/31/solo-airfare-increase-thrifty-traveler/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -70,56 +70,65 @@
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td><!-- BTC weekly closing price --></td>
-     <td><!-- weekly % change --></td>
-     <td><!-- YTD % change --></td>
+     <td><!-- BTC weekly closing price -->$104,763.57</td>
+     <td>+0.2%<!-- weekly % change --></td>
+     <td>+11.4%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td><!-- Nasdaq 100 weekly closing price --></td>
-     <td><!-- weekly % change --></td>
-     <td><!-- YTD % change --></td>
+     <td>21,881.38<!-- Nasdaq 100 weekly closing price --></td>
+     <td>+2.5%<!-- weekly % change --></td>
+     <td>+1.6%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td><!-- Gold weekly closing price --></td>
-     <td><!-- weekly % change --></td>
-     <td><!-- YTD % change --></td>
+     <td>$3,378.20/oz<!-- Gold weekly closing price --></td>
+     <td>+2.0%<!-- weekly % change --></td>
+     <td>+26.0%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td><!-- USD Index weekly closing price --></td>
-     <td><!-- weekly % change --></td>
-     <td><!-- YTD % change --></td>
+     <td>98.72<!-- USD Index weekly closing price --></td>
+     <td>-0.7%<!-- weekly % change --></td>
+     <td>-8.3%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td><!-- 10-year weekly closing yield --></td>
-     <td><!-- weekly change --></td>
-     <td><!-- YTD change --></td>
+     <td>4.389%<!-- 10-year weekly closing yield --></td>
+     <td>-0.03<!-- weekly change --></td>
+     <td>-0.1570<!-- YTD change --></td>
    </tr>
+
+
+
+
+
 
 </tbody>
 </table>
 
 
+
+
+
+
+
+
 ### Looking Ahead
+
+- Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK -->
 
 - A data center boom is underway in the desert east of Reno, Nevada, with major tech companies like Google, Microsoft, and Apple building massive facilities to support their artificial intelligence and cloud computing needs. This surge in construction has raised concerns about the energy demands and carbon costs of the AI revolution, which is the focus of MIT Technology Review's new series, "Power Hungry." ([MIT Technology Review](https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
-- Prof G/Pat McGee on iPhone in the U.S. ([]()) <!-- Link TK -->
-
-- **Uh-oh.** ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM -->
+- **Uh-oh.** ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM --> | - **French authorities have made a breakthrough in the recent string of crypto-related kidnappings, arresting a 24-year-old French-Moroccan national suspected of being the mastermind behind the schemes.** The individual, Badiss Mohamed Amide Bajjou, is wanted by Interpol for organized extortion and kidnapping, and his arrest is seen as a result of excellent judicial cooperation between France and Morocco. https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report ([]()) <!-- Draft by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
-- Despite the COVID-19 pandemic having a devastating impact on American students and schools in many areas, high school graduation rates have continued to rise steadily over the past five years. However, this trend is concerning as it suggests that many students are being allowed to graduate underprepared for college or the workforce, with research indicating that chronic absenteeism during the pandemic had a significantly weakened effect on graduation rates. ([Washington Post](https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/)) <!-- Draft by Leo/Llama 3.1 8B -->
-
-- Airline experts have discovered that some major carriers, including Delta, United, and American Airlines, are charging individual passengers more for seats on identical flights compared to groups of travelers. This pricing strategy, which may not be new, has sparked debate among travel experts and raises questions about transparency in airline pricing. ([Washington Post](https://www.washingtonpost.com/travel/2025/05/31/solo-airfare-increase-thrifty-traveler/)) <!-- Draft by Leo/Llama 3.1 8B -->
+Marc Maron is ending his popular podcast "WTF with Marc Maron" after 16 years, citing burnout and a sense of satisfaction with the show's impact on culture. The podcast, known for its introspective and often emotional conversations with celebrities, has been a staple of the medium and a refuge from the world's anger and confusion. ([Salon](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
