Writing through all sections...

--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -22,6 +22,12 @@ Draft summary by Leo/Llama 3.1 8B:
 
 Bitcoin's close ties to the Trump administration are causing discomfort among some factions of the crypto world, as the industry seeks to gain mainstream acceptance. The industry's flagship event, the Bitcoin Conference, has become a platform for Trump officials and allies to promote their favored policies, with some critics warning that the government's increasing involvement could create conflicts of interest and jeopardize the industry's legitimacy. ([Wall Street Journal](https://www.wsj.com/finance/currencies/bitcoin-goes-all-in-on-maga-shedding-its-antigovernment-slant-2f1bb3d0?st=p5MmW7&reflink=desktopwebshare_permalink))  
 
+Wrap in mention of Trump-Musk blowup as well. CNBC coverage of the melodrama: https://www.cnbc.com/2025/06/05/trump-musk-crazy-government-contracts.html
+
+Luckily, Kanye is trying to [mediate the whole thing](https://www.salon.com/2025/06/05/please-noooooo-ye-implores-trump-musk-to-reconcile/), it seems. That should help.
+
+The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html
+
  <hr>
 
  [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
@@ -35,19 +41,13 @@ Bitcoin's close ties to the Trump administration are causing discomfort among so
 
 - Reddit has filed a lawsuit against AI company Anthropic, alleging that it continued to access and use the online forum's data without permission, despite claiming to have stopped. The complaint claims that Anthropic's actions were unauthorized and violated Reddit's user data policy, and that the company used the data for commercial purposes without paying for it. ([Wall Street Journal](https://www.wsj.com/tech/ai/reddit-lawsuit-anthropic-ai-3b9624dd?st=YhJVhU&reflink=desktopwebshare_permalink)) <!-- Draft by Leo/Llama 3.1 8B -->
 
-- Meta makes investment in nuclear data centers by Contellation. <!-- Link TK -->
+- Meta makes investment in nuclear data centers by Contellation. <!-- Link TK --> | https://decrypt.co/323815/amazon-10-billion-north-carolina-data-centers-ai-expansion | A data center boom is underway in the desert east of Reno, Nevada, with major tech companies like Google, Microsoft, and Apple building massive facilities to support their artificial intelligence and cloud computing needs. This surge in construction has raised concerns about the energy demands and carbon costs of the AI revolution, which is the focus of MIT Technology Review's new series, "Power Hungry." ([MIT Technology Review](https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 - The Ethereum Foundation plans to take a more deliberate approach to spending its substantial ETH reserves, aiming to support the ecosystem during downturns or pivotal moments, as part of a broader shift to double down on Ethereum's role as the leading platform for decentralized applications. https://www.theblock.co/post/357066/ethereum-foundation-expects-2025-26-to-be-pivotal-for-the-ecosystem-as-it-reforms-its-treasury-management ([]())
 
-- **Crypto scored some big wins on Wall Street:** Circle IPO Thursday. <!-- Following story covers wednesday night pricing: - https://decrypt.co/323795/stablecoin-giant-circle-raises-1-billion-ipo-nyse-debut --> | Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK --> | JPMorgan is expanding its crypto services, allowing wealth-management clients to use cryptocurrency assets as loan collateral for certain ETFs, including BlackRock's iShares Bitcoin Trust, and counting crypto holdings toward their net worth and liquid assets when determining borrowing limits. This move marks another step in the bank's growing involvement in the crypto industry, following its decision to allow customers to buy bitcoin earlier this year. https://www.theblock.co/post/356998/jpmorgan-to-offer-crypto-etf-financing-considers-letting-clients-use-crypto-as-loan-collateral-report ([]())
+- **Crypto scored some big wins on Wall Street:** Circle IPO Thursday. WSJ coverage: https://www.wsj.com/finance/stocks/crypto-firm-circle-set-to-make-stock-market-debut-cb804241?st=vTzrwQ&reflink=desktopwebshare_permalink | Arca CIO pissed at small allocation: https://www.theblock.co/post/357218/arca-cio-jeff-dorman-slams-measly-crcl-allocation-from-stablecoin-issuers-oversubscribed-ipo <!-- Other details: Following story covers wednesday night pricing - https://decrypt.co/323795/stablecoin-giant-circle-raises-1-billion-ipo-nyse-debut | Trading halt: https://decrypt.co/323854/usdc-issuer-circle-halted-nyse-debut-crcl-triples-ipo-price --> | Bloomberg: BlackRock BTC ETF had record inflows in May. <!-- Link TK --> | JPMorgan is expanding its crypto services, allowing wealth-management clients to use cryptocurrency assets as loan collateral for certain ETFs, including BlackRock's iShares Bitcoin Trust, and counting crypto holdings toward their net worth and liquid assets when determining borrowing limits. This move marks another step in the bank's growing involvement in the crypto industry, following its decision to allow customers to buy bitcoin earlier this year. https://www.theblock.co/post/356998/jpmorgan-to-offer-crypto-etf-financing-considers-letting-clients-use-crypto-as-loan-collateral-report ([]())
 
 - *K Wave Media, a Korean entertainment firm listed on the NASDAQ, has seen its stock soar 143% after announcing plans to allocate a significant portion of its $500 million raise towards building a Bitcoin treasury and investing in related initiatives.* The company aims to leverage Bitcoin as a store of value and a foundation for innovation, joining a growing number of companies imitating a Bitcoin-focused corporate strategy. ([Decrypt](https://decrypt.co/323671/k-pop-firms-stock-soars-115-after-bitcoin-purchase-plans)) | **K-Pop Media Firm K Wave Sees Stock Surge After Announcing Bitcoin Acquisition Strategy** K Wave Media, a Nasdaq-listed K-Pop media holding company, has seen its stock surge 132.39% after announcing plans to sell $500 million worth of shares to finance its Bitcoin purchases and other corporate operations. The move follows a growing trend of firms holding Bitcoin as a strategic reserve asset, with K Wave claiming to be among the first publicly traded media companies to integrate BTC directly into its core treasury operations. https://www.theblock.co/post/357032/nasdaq-listed-k-pop-media-firm-k-wave-stock-rallies-130-after-announcing-bitcoin-acquisition-strategy ([]())
-
-<!--
-
-- Despite the COVID-19 pandemic having a devastating impact on American students and schools in many areas, high school graduation rates have continued to rise steadily over the past five years. However, this trend is concerning as it suggests that many students are being allowed to graduate underprepared for college or the workforce, with research indicating that chronic absenteeism during the pandemic had a significantly weakened effect on graduation rates. ([Washington Post](https://www.washingtonpost.com/opinions/2025/05/15/schools-pandemic-graduation-rates/)) <!-- Draft by Leo/Llama 3.1 8B
-
-- Airline experts have discovered that some major carriers, including Delta, United, and American Airlines, are charging individual passengers more for seats on identical flights compared to groups of travelers. This pricing strategy, which may not be new, has sparked debate among travel experts and raises questions about transparency in airline pricing. ([Washington Post](https://www.washingtonpost.com/travel/2025/05/31/solo-airfare-increase-thrifty-traveler/)) <!-- Draft by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -103,28 +103,16 @@ Bitcoin's close ties to the Trump administration are causing discomfort among so
      <td>-0.1570<!-- YTD change --></td>
    </tr>
 
-
-
-
-
-
 </tbody>
 </table>
 
-
-
-
-
-
-
-
 ### Looking Ahead
 
-- Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK -->
+- Trump's Truth social is looking to launch a bitcoin ETF. https://www.cnbc.com/video/2025/06/04/trumps-truth-social-continues-crypto-push-with-step-toward-bitcoin-etf-launch-cnbc-crypto-world.html | https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html | He's already made over 1B on crypto: https://www.forbes.com/sites/danalexander/2025/06/05/this-is-how-much-trump-has-made-from-crypto-so-far/ | https://www.theblock.co/post/357210/world-liberty-sends-cease-and-desist-letter-to-firms-building-unaffiliated-trump-branded-wallet-report
 
-- A data center boom is underway in the desert east of Reno, Nevada, with major tech companies like Google, Microsoft, and Apple building massive facilities to support their artificial intelligence and cloud computing needs. This surge in construction has raised concerns about the energy demands and carbon costs of the AI revolution, which is the focus of MIT Technology Review's new series, "Power Hungry." ([MIT Technology Review](https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/)) <!-- Draft by Leo/Llama 3.1 8B -->
+- Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK --> | Separate bill to protect devs: https://www.theblock.co/post/357182/crypto-groups-push-to-add-a-bill-that-aims-to-protect-software-developers-in-overarching-legislation
 
-- **Uh-oh.** ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM --> | - **French authorities have made a breakthrough in the recent string of crypto-related kidnappings, arresting a 24-year-old French-Moroccan national suspected of being the mastermind behind the schemes.** The individual, Badiss Mohamed Amide Bajjou, is wanted by Interpol for organized extortion and kidnapping, and his arrest is seen as a result of excellent judicial cooperation between France and Morocco. https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report ([]()) <!-- Draft by Leo/Llama 3.1 8B -->
+- **Uh-oh.** https://slate.com/technology/2025/06/crypto-news-wrench-attacks-nyc-kidnapping-crime-rise.html | ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM --> | - **French authorities have made a breakthrough in the recent string of crypto-related kidnappings, arresting a 24-year-old French-Moroccan national suspected of being the mastermind behind the schemes.** The individual, Badiss Mohamed Amide Bajjou, is wanted by Interpol for organized extortion and kidnapping, and his arrest is seen as a result of excellent judicial cooperation between France and Morocco. https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report ([]()) <!-- Draft by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
