--- a/2025/2025-06-08-wir.md
+++ b/2025/2025-06-08-wir.md
@@ -28,6 +28,14 @@ Luckily, Kanye is trying to [mediate the whole thing](https://www.salon.com/2025
 
 The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html
 
+**Trump Media filed a proposal** with U.S. regulators to offer [an exchange-traded bitcoin fund](https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html). Fees from the listing would add to the U.S. president's personal profits from crypto since taking office -- a trend that has drawn ethics complaints from critics in Congress and beyond. President Trump's haul has already topped $1 billion
+
+
+
+company Truth Social is looking to launch a bitcoin ETF. https://www.cnbc.com/video/2025/06/04/trumps-truth-social-continues-crypto-push-with-step-toward-bitcoin-etf-launch-cnbc-crypto-world.html | https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html | He's already made over 1B on crypto: https://www.forbes.com/sites/danalexander/2025/06/05/this-is-how-much-trump-has-made-from-crypto-so-far/ | https://www.theblock.co/post/357210/world-liberty-sends-cease-and-desist-letter-to-firms-building-unaffiliated-trump-branded-wallet-report
+
+
+
  <hr>
 
  [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
@@ -62,61 +70,82 @@ The 10-year anniversary of Trump's entry into presidential politics is approachi
     <tr>
       <th>Indicator</th>
       <th>Close</th>
-      <th>Weekly %</th>
-      <th>YTD %</th>
+      <th>Weekly</th>
+      <th>YTD</th>
     </tr>
   </thead>
 
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td><!-- BTC weekly closing price -->$104,763.57</td>
-     <td>+0.2%<!-- weekly % change --></td>
-     <td>+11.4%<!-- YTD % change --></td>
+     <td>$104,228.09<!-- BTC weekly closing price --></td>
+     <td>-0.3%<!-- weekly % change --></td>
+     <td>+11.1%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td>21,881.38<!-- Nasdaq 100 weekly closing price --></td>
-     <td>+2.5%<!-- weekly % change --></td>
-     <td>+1.6%<!-- YTD % change --></td>
+     <td>21,761.79<!-- Nasdaq 100 weekly closing price --></td>
+     <td>+2.0%<!-- weekly % change --></td>
+     <td>+3.6%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td>$3,378.20/oz<!-- Gold weekly closing price --></td>
-     <td>+2.0%<!-- weekly % change --></td>
-     <td>+26.0%<!-- YTD % change --></td>
+     <td>$3,331.00/oz<!-- Gold weekly closing price --></td>
+     <td>+0.5%<!-- weekly % change --></td>
+     <td>+26.7%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td>98.72<!-- USD Index weekly closing price --></td>
-     <td>-0.7%<!-- weekly % change --></td>
-     <td>-8.3%<!-- YTD % change --></td>
+     <td>99.2<!-- USD Index weekly closing price --></td>
+     <td>-0.2%<!-- weekly % change --></td>
+     <td>-8.6%<!-- YTD % change --></td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td>4.389%<!-- 10-year weekly closing yield --></td>
-     <td>-0.03<!-- weekly change --></td>
-     <td>-0.1570<!-- YTD change --></td>
+     <td>4.510%<!-- 10-year weekly closing yield --></td>
+     <td>+0.090<!-- weekly change --></td>
+     <td>-0.060<!-- YTD change --></td>
    </tr>
 
 </tbody>
 </table>
 
-### Looking Ahead
 
-- Trump's Truth social is looking to launch a bitcoin ETF. https://www.cnbc.com/video/2025/06/04/trumps-truth-social-continues-crypto-push-with-step-toward-bitcoin-etf-launch-cnbc-crypto-world.html | https://finance.yahoo.com/news/donald-trumps-truth-social-officially-files-for-bitcoin-etf-as-company-deepens-crypto-push-150426350.html | He's already made over 1B on crypto: https://www.forbes.com/sites/danalexander/2025/06/05/this-is-how-much-trump-has-made-from-crypto-so-far/ | https://www.theblock.co/post/357210/world-liberty-sends-cease-and-desist-letter-to-firms-building-unaffiliated-trump-branded-wallet-report
+
+
+
+
+
+
+### Looking Ahead
 
 - Bloomberg: Lummis says Genius Act will pass next week, won't allow interest-bearing stablecoin accounts due to political trade-offs. <!-- Link TK --> | Separate bill to protect devs: https://www.theblock.co/post/357182/crypto-groups-push-to-add-a-bill-that-aims-to-protect-software-developers-in-overarching-legislation
 
 - **Uh-oh.** https://slate.com/technology/2025/06/crypto-news-wrench-attacks-nyc-kidnapping-crime-rise.html | ABC News reports that "wrench attacks" against wealthy crypto investors are [on the rise](https://abcnews.go.com/US/wireStory/wrench-attacks-wealthy-crypto-holders-rise-122270144). One high-profile example: A recent [kidnapping and torture case](https://nypost.com/2025/05/23/us-news/kentucky-crypto-investor-allegedly-tortured-captive-italian-tourist-for-weeks-in-luxury-nyc-apartment-sources/) in New York's posh SoHo neighborhood. <!-- Draft by PM --> | - **French authorities have made a breakthrough in the recent string of crypto-related kidnappings, arresting a 24-year-old French-Moroccan national suspected of being the mastermind behind the schemes.** The individual, Badiss Mohamed Amide Bajjou, is wanted by Interpol for organized extortion and kidnapping, and his arrest is seen as a result of excellent judicial cooperation between France and Morocco. https://decrypt.co/323693/police-arrest-alleged-amstermind-french-crypto-kidnappings-report ([]()) <!-- Draft by Leo/Llama 3.1 8B -->
 
+- Prof G/Pat McGee on iPhone in the U.S.
+
 ### Odds & Ends
 
-Marc Maron is ending his popular podcast "WTF with Marc Maron" after 16 years, citing burnout and a sense of satisfaction with the show's impact on culture. The podcast, known for its introspective and often emotional conversations with celebrities, has been a staple of the medium and a refuge from the world's anger and confusion. ([Salon](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/)) <!-- Draft by Leo/Llama 3.1 8B -->
+**Farewell, WTF.** Comedian Marc Maron announced on [Monday's episode](https://www.wtfpod.com/podcast/episode-1648-john-mulaney) of his podcast WTF that he and producer Brendan McDonald will end the 16-year project this fall.
+
+In Salon's coverage of the announcement, senior cultural critic Melanie McFarland accurately [captured](https://www.salon.com/2025/06/04/marc-marons-heart-made-wtf-a-hit-in-the-joe-rogan-age-its-all-about-shallow-brawn/) Maron's significance as a pioneer for podcasting. He was undeniably an early adopter of the technology, of course. And in June 2015, he became the first podcaster to [interview a sitting president](https://www.wtfpod.com/podcast/episodes/episode_613_-_president_barack_obama), a colossal milestone for the medium itself.  
+
+McFarland also notes how the warmth and humanity Maron has consistently brought to WTF throughout its run have proved to be a sad exception as podcasting has exploded in popularity over the years:
+
+>*Maron’s production output has been daunting since the earliest days of “WTF,” churning out two episodes a week to build an archive surpassing 1,600 installments. (Monday’s episode is No. 1,648.) All these years later, and with a constellation’s worth of additional competition, it’s still one of the most downloaded and streamed podcasts going.*
+>
+>*But it’s also a small island in a medium overrun by shallow rage theater celebrating thoughtlessness. Within that swirl, “WTF” stands out as an oasis of introspection thanks to Maron presenting his show as an open cavern of feeling, constantly exposing new corners of insight and inviting listeners inside to revel in those discoveries.*
+
+At this point, Maron has well earned a break, which he says he sorely needs from the production grind. But I do hope *someone* keeps making media like WTF on the internet, stuff that's kind and thoughtful and not so "twitchy," to borrow a favorite phrase of my old newspaper colleague Kara Swisher, now a hugely popular podcaster herself.
+
+To the extent we're all content creators on social networks these days, maybe each of us could even take on a small piece of the task from here, everyday, one post at a time.
+
+Boomer lives!
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
